--- a/BasicsOfProgramming-Lab13-StringsAndModules/BasicsOfProgramming-Lab13-StringsAndModules.vcxproj
+++ b/BasicsOfProgramming-Lab13-StringsAndModules/BasicsOfProgramming-Lab13-StringsAndModules.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="gamma.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
