--- a/BasicsOfProgramming-Lab13-StringsAndModules/BasicsOfProgramming-Lab13-StringsAndModules.vcxproj.filters
+++ b/BasicsOfProgramming-Lab13-StringsAndModules/BasicsOfProgramming-Lab13-StringsAndModules.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="Source.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="gamma.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gamma.h">
